--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/parser": "^2.24.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.5",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^12.0.0",
@@ -70,9 +71,10 @@
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
+    "stream-browserify": "^3.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack": "5.70.0",
+    "webpack-cli": "4.9.2"
   }
 }
