--- a/package.json
+++ b/package.json
@@ -76,5 +76,9 @@
     "typescript": "^3.7.5",
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=7.0.0"
   }
 }
