--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,8 @@ name: Publish
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
+      - "v[0-9]+.[0-9]+.[0-9]+*"
+  pull_request:
 
 jobs:
   publish:
@@ -16,11 +17,11 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 14
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 16
+          registry-url: "https://registry.npmjs.org"
       - name: Publish to npm
         run: |
           npm ci
-          npm publish
+          npm pack
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
