--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "types": "dist/cjs/index.d.ts",
   "unpkg": "dist/umd/index.min.js",
   "files": [
-    "dist"
+    "/dist"
   ],
   "keywords": [
     "wallet",
